--- a/app/src/main/res/layout/activity_poke_details.xml
+++ b/app/src/main/res/layout/activity_poke_details.xml
@@ -14,9 +14,10 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/url"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image"
-        app:layout_constraintVertical_bias="0.502" />
+        app:layout_constraintVertical_bias="0.781" />
 
     <TextView
         android:id="@+id/url"
@@ -51,7 +52,7 @@
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image"
-        app:layout_constraintVertical_bias="0.027" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/plus"
